--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@
 body {
     min-height: 100vh;
   
-    background: url(../IMG/html_table.jpg) center / cover;
+    background: url(../IMG/imagen2.jpg) center / cover;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -125,7 +125,7 @@ thead th {
     position: sticky;
     top: 0;
     left: 0;
-    background-color: #d5d1defe;
+    background-color: #efb810;
     cursor: pointer;
     text-transform: capitalize;
 }
@@ -213,15 +213,15 @@ thead th span.icon-arrow {
 }
 
 thead th:hover span.icon-arrow{
-    border: 1.4px solid #6c00bd;
+    border: 1.4px solid #efb810;
 }
 
 thead th:hover {
-    color: #6c00bd;
+    color: #efb810;
 }
 
 thead th.active span.icon-arrow{
-    background-color: #6c00bd;
+    background-color: #efb810;
     color: #fff;
 }
 
@@ -230,7 +230,7 @@ thead th.asc span.icon-arrow{
 }
 
 thead th.active,tbody td.active {
-    color: #6c00bd;
+    color: #efb810;
 }
 
 .export__file {
