--- a/public/css/style.css
+++ b/public/css/style.css
@@ -308,3 +308,30 @@ thead th.active,tbody td.active {
     width: 2rem;
     height: auto;
 }
+
+
+.btn-block{
+    width: 9%;
+    display: block;
+    margin-bottom: 5px;
+  }
+  .btn {
+    border: none; 
+    color: white; 
+    padding: 14px 28px; 
+    cursor: pointer; 
+    border-radius: 5px; 
+  }
+  .primary {background-color: #007bff;} 
+  .primary:hover {background: #0b7dda;}
+  .secondary {background-color: #e7e7e7; color: black;} 
+  .secondary:hover {background: #ddd;}
+  .success {background-color: #04AA6D;} 
+  .success:hover {background-color: #46a049;}
+  .warning {background-color: #ff9800;} 
+  .warning:hover {background: #e68a00;}
+  .danger {background-color: #f44336;} 
+  .danger:hover {background: #da190b;}
+  a {
+    text-decoration: none; /* Elimina la decoración de subrayado */
+}
