--- a/public/css/registro.css
+++ b/public/css/registro.css
@@ -5,203 +5,73 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-body{
-    background-image: url(../IMG/christopher-gower-m_HRfLhgABo-unsplash.jpg);
+body {
+    margin: 0;
+    padding: 0;
     display: flex;
-    align-items: center;
     justify-content: center;
-    height: 100vh;
-   
-    background-size: cover;
-
-}
-.hide{
-    position: absolute;
-    transform: translateY(-900px);
-    
-    }
-
-.container-form{
-    max-width: 900px;
-    height: 500px;
-    border-radius: 20px;
-    box-shadow: 0 5px 7px rgba(0,0, 0, .1);
-    display: flex;
-   
-    transition: all is ease;
-    margin: 10px;
-}
-
-.information{
-    width: 40%;
-    display: flex;
     align-items: center;
-    text-align: center;
-    background: #42275a;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, hsla(309, 21%, 37%, 0.808), hsla(272, 40%, 25%, 0.795));  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, hsla(309, 21%, 37%, 0.651), hsla(272, 40%, 25%, 0.712)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    min-height: 100vh;
+    background-color:#0a192f;
+    font-family: Arial, sans-serif;
+  }
   
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
-}
-
-.info-clilds{
-    width: 100%;
-    padding: 0 30px;
-
-}
-.info-clilds h2{
-    font-size: 2.5rem;
-    color: #FFF;
-}
-
-.info-clilds p{
-    margin: 15px 0;
-    color: #FFF;
-
-}
-
-.info-clilds input{
-    background-color: transparent;
-    outline: none;
-    border: solid 2px #FFF;
-    border-radius: 20px;
-    padding: 10px 20px;
-    color: #FFF;
-    cursor: pointer;
-    transition: backbround-color .3 ease;
-}
-
-.info-clilds input:hover{
-    background-color: #9191bd;
+  .container {
+    display: flex;
+  }
+  
+  .register-container {
+    background-color: rgb(0, 0, 0);
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgb(231, 236, 129);
+    margin: auto;
+    color: rgb(255, 255, 255);
+  }
+  
+  .register-form {
+    padding: 40px;
+  }
+  
+  h2 {
+    margin-bottom: 20px;
+    color: #386493;
+  }
+  
+.form-control {
     border: none;
-    color:#fff ;
-    box-shadow: 0 2px 5px rgba(0,0, 0, .1);
-}
-
-.form-information{
- 
-    display: flex ;
-    align-items: center;
-    justify-content: center;
-    width: 60%;
-    text-align: center;
-    background-color: #f8f8f8;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-}
-.form-information-childs{
-    padding: 0 30px;
-   
-}
-.form-information-childs h2{
-    color: #333;
-    font-size: 2rem;
-}
-
-.form-information-childs p{
-    color: #555;
-
-}
-.icons{
-    margin: 15px 0;
-
-}
-.icons i{
-    border-radius: 50%;
-    padding: 15px;
-    cursor: pointer;
-    margin: 0 10px;
-    color: #9191bd;
-    border: solid thin #9191bd;
-    transition: backgraund-color 0.3s ease;
-    box-shadow: 0 2px 5px rgba(0,0, 0, .1);
-}
-
-.icons i:hover{
-    background-color: #c7c7f3;
-    color: #fff;
-}
-
-.form{
-    margin: 30px 0 0 0;
-
-}
-
-.form label{
-    display: flex ;
-    align-items: center;
+    border-radius: 5px;
+    padding: 12px;
     margin-bottom: 15px;
-    border-radius: 20px;
-    padding: 0 10px;
-    background-color: #fff;
-    box-shadow: 0 2px 5px rgba(0,0, 0, .1);
-
-}
-.form label input{
-    width: 100%;
-    padding: 10px;
-    background-color: #fff;
-    border: none;
+    background-color: #f2f2f2;
+    color: rgb(255, 255, 255);
     outline: none;
-    border-radius: 20px;
-    color: #333;
 }
-
-.form label i{
-    color: #a7a7a7;
-}
-
-.form input[type="submit"]{
-    background-color: #9191bd;
-    color: #fff;
-    border-radius: 20px;
+  
+.btn-register {
+    display: block;
+    padding: 12px;
     border: none;
-    padding: 10px 15px;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: white;
     cursor: pointer;
-    margin-top: 10px;
-    box-shadow: 0 2px 5px rgba(0,0, 0, .1);
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+    transition: background-color 0.3s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-.form input[type="submit"]:hover{
-    background-color: #7a7a9a;
+  
+.btn-register:hover {
+    background-color: #00ff00cc;
 }
-
-.info-clilds a {
-    color: #9c9cdf;
-   text-decoration: underline;
+  
+.toggle-form {
+    color:#386493;
+    text-decoration: none;
 }
-/* responsive form*/
-
-@media screen and (max-width:750px){
-    html{
-        font-size: 12px;
-    }
+  
+.toggle-form:hover {
+    text-decoration: underline;
 }
-
-@media screen and (max-width:580px){
-    html{
-        font-size: 10px;
-    }
-    .container-form{
-        flex-direction: column;
-        height: auto;
-    }
-
-    .information{
-        width: 100%;
-        padding: 20px;
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom-left-radius: 0px;
-        border-bottom-right-radius: 0 ;
-     
-    }
-
-    .form-information{
-        width: 100%;
-        padding: 20px;
-        border-bottom-left-radius: 20PX;
-        border-top-right-radius: 0;
-     
-    }
-}
+  
