--- a/public/css/catalogo.css
+++ b/public/css/catalogo.css
@@ -29,7 +29,7 @@ body {
     padding: 20px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease-in-out;
-    height: 420px; /* Altura fija para todas las tarjetas */
+    height: 420px; 
 }
 
 .producto:hover {
@@ -39,11 +39,11 @@ body {
 
 .producto img {
     max-width: 100%;
-    height: 150px; /* Altura fija para la imagen */
+    height: 150px; 
     display: block;
     margin: 0 auto;
     border-radius: 5px;
-    object-fit: cover; /* Ajustar imagen manteniendo la relación de aspecto */
+    object-fit: cover; 
 }
 
 .producto h3 {
