--- a/public/css/formulario.css
+++ b/public/css/formulario.css
@@ -1,54 +1,58 @@
 body {
-    background-color: #343a40;
-    color: #fff;
-    padding: 20px;
+    font-family: Arial, sans-serif;
+    background-color: #f2f2f2;
 }
 
 .container {
-    background-color: #1e1e1e;
-    padding: 20px;
+    background-color: #fff;
     border-radius: 10px;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    margin-top: 30px;
 }
 
-.form-label {
-    font-weight: bold;
+.form-title {
+    color: #0c0c0c; /* Color azul para el título */
 }
 
 .form-control {
-    background-color: #2c2c2c;
+    border-radius: 5px;
+    border-color: #ccc;
+}
+
+.custom-file-input::-webkit-file-upload-button {
+    background-color: #ffb700; 
     color: #fff;
     border: none;
     border-radius: 5px;
+    padding: 5px 15px;
+    cursor: pointer;
 }
 
-.form-control:focus {
-    background-color: #333;
-    color: #fff;
-    box-shadow: none;
+.custom-file-input::-webkit-file-upload-button:hover {
+    background-color: #034993;
 }
 
-.btn-primary {
-    background-color: #007bff;
-    border: none;
-    border-radius: 5px;
-}
-
-.btn-primary:hover {
-    background-color: #0056b3;
-}
-
-.btn-icon {
-    padding: 0;
-}
-
-.custom-file-label {
-    background-color: #2c2c2c;
+.btn-enviar {
+    background-color: #ffe100; 
     color: #fff;
     border: none;
     border-radius: 5px;
+    padding: 10px 20px;
+    text-align: center;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s;
 }
 
+.btn-enviar:hover {
+    background-color: #0056b3; 
+}
 
+.icono {
+    font-size: 24px;
+    color: #ec1616; 
+    margin-right: 5px;
+}
 
 
