contactos y forma de pago

--- a/public/css/inicio.css
+++ b/public/css/inicio.css
@@ -2,7 +2,12 @@
  .navbar {
     background-color: black;
   }
-
+  .navbar .nav-item.dropdown:hover .dropdown-menu {
+    display: block;
+    position: absolute;
+    top: 100%;
+    left: 0;
+}
   .navbar a {
     color: gold;
   }
