optimizacion de plantilla

--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -25,10 +25,10 @@ h1{
     background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     
 
-    overflow: auto;
+    /* overflow: auto; */
     padding-top: 25px;
     padding-bottom: 25px;
-    position: fixed;
+    /* position: fixed; */
     left: 0;
     top: 0;
     width: 100%;
