--- a/public/css/login2.css
+++ b/public/css/login2.css
@@ -1,8 +1,7 @@
-body {
+.body {
   background: url('background.jpg') no-repeat center center fixed;
   background-size: cover;
   height: 100vh;
-  display: flex;
   justify-content: center;
   align-items: center;
   margin: 0;
