--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,7 @@
 * {
     margin: 0;
     padding: 0;
+   
 
     box-sizing: border-box;
     font-family: sans-serif;
@@ -12,6 +13,7 @@ body {
     background: url(../IMG/imagen2.jpg) center / cover;
     justify-content: center;
     align-items: center;
+  
 }
 
 main.table {
@@ -22,6 +24,8 @@ main.table {
     backdrop-filter: blur(7px);
     box-shadow: 0 .4rem .8rem #0005;
     border-radius: .8rem;
+    margin-top: 20px;
+    margin-left: 200px;
 
     overflow: hidden;
 }
