--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@
 
 body {
     min-height: 100vh;
-    background: url(../IMG/imagen2.jpg) center / cover;
+    background: url(../IMG/fondosss.jpg) center / cover;
     justify-content: center;
     align-items: center;
   
