--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,9 +9,7 @@
 
 body {
     min-height: 100vh;
-  
     background: url(../IMG/imagen2.jpg) center / cover;
-    display: flex;
     justify-content: center;
     align-items: center;
 }
@@ -20,11 +18,12 @@ main.table {
     width: 82vw;
     height: 90vh;
     background-color: #fff5;
-
+    margin-left: 10%;
+    margin-top: 40px;
     backdrop-filter: blur(7px);
     box-shadow: 0 .4rem .8rem #0005;
     border-radius: .8rem;
-
+    align-items: center;
     overflow: hidden;
 }
 
