--- a/public/css/catalogo.css
+++ b/public/css/catalogo.css
@@ -1,16 +1,16 @@
 body {
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center;
+    align-items: center; */
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: white;
 }
 
 
 
 .navbar {
-    background-color: #333;
+    background-color: #090909;
 }
 
 .navbar-brand {
