--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -8,7 +8,7 @@ body{
     font-family: 'Kaushan Script', cursive;
     font-family: 'Libre Baskerville', serif;
     font-size: 20px;
-    background: #fff;
+    background: white;
 
 }
 h1{
