--- a/public/css/inicio.css
+++ b/public/css/inicio.css
@@ -15,8 +15,16 @@
     padding: 80px 0;
   }
 
+  h1{
+    color: #000000;
+    text-align: center;
+    font-family: 'Kaushan Script', cursive;
+    font-size: 50px;
+    
+}
   .section h2 {
     text-align: center;
+    margin-left: 0;
   }
 
   .section img {
