--- a/public/css/inicio.css
+++ b/public/css/inicio.css
@@ -15,12 +15,13 @@
     padding: 80px 0;
   }
 
-  h1{
-    color: #000000;
+
+
+.titulo1{
+  color: #000000;
     text-align: center;
     font-family: 'Kaushan Script', cursive;
     font-size: 50px;
-    
 }
   .section h2 {
     text-align: center;
