--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@
 
 body {
     min-height: 100vh;
-    background: url(../IMG/fondosss.jpg) center / cover;
+    background: url(../IMG/fn4.jpg) center / cover;
     justify-content: center;
     align-items: center;
   
@@ -28,6 +28,7 @@ main.table {
     border-radius: .8rem;
     margin-top: 20px;
     margin-left: 150px;
+    margin-bottom: 90px;
 
     overflow: hidden;
 }
