--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -1,124 +1,119 @@
-
-  .contenedor-cart{
-
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+body {
+    width: 100vw;
     height: 100vh;
-    width: 100%;
-    
-  }
-  
-  .card{
-    width: 20em;
-    height: 25em;
-    position: relative;
-    margin: 0 1em;
-   
-    background-size: cover;
-    color: #fff;
-    border-radius: 18px;
-    box-shadow: #000 0px 11px 15px 0px;
-  
-  }
-
-  
-  #cont{
-    background: url(../IMG/invierno.jpg) center;
-    width: 20em;
-    height: 25em;
-    position: relative;
-    margin: 0 1em;
-   
-    background-size: cover;
-    color: #fff;
-    border-radius: 18px;
-    box-shadow: #000 0px 11px 15px 0px;
-  }
-
-  #cont1{
-    background: url(../IMG/primavera.png) center;
-    width: 20em;
-    height: 25em;
-    position: relative;
-    margin: 0 1em;
-   
-    background-size: cover;
-    color: #fff;
-    border-radius: 18px;
-    box-shadow: #000 0px 11px 15px 0px;
-  }
-  #cont2{
-    background: url(../IMG/verano.jpg) center;
-    width: 20em;
-    height: 25em;
-    position: relative;
-    margin: 0 1em;
-   
-    background-size: cover;
-    color: #fff;
-    border-radius: 18px;
-    box-shadow: #000 0px 11px 15px 0px;
-  }
-  #cont3{
-    background: url(../IMG/otoño.png) center;
-    width: 20em;
-    height: 25em;
-    position: relative;
-    margin: 0 1em;
-   
-    background-size: cover;
-    color: #fff;
-    border-radius: 18px;
-    box-shadow: #000 0px 11px 15px 0px;
-  }
-  
-  .contenedor-tarjetas {
     display: flex;
-    justify-content: space-between; /* Espaciado equitativo entre las tarjetas */
-  }
-  
-
-  
-  .card .overlay{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.8);
-    opacity: 0;
-    transition: 0.3s;
+    justify-content: center;
+    background:url("background.jpg");
+    overflow: hidden;
+  }
+  .card {
+    display: grid;
+    grid-template-columns: 300px;
+    grid-template-rows: 210px 210px 80px;
+    grid-template-areas: "image" "text" "stats";
+  
     border-radius: 18px;
+    background: white;
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.9);
+    font-family: roboto;
+    text-align: center;
+    
   
+    transition: 0.5s ease;
+    cursor: pointer;
+    margin:30px;
   }
-  .card:hover .overlay {opacity: 1;}
-  
-  .card .btn{
-    padding: 0.6em 1.3em;
-    text-decoration: none;
-    color: #fff;
-    border: 2px #fff solid;
-    letter-spacing: 1px;
-    border-radius: 8px;
-  }
-  
-  .card .btn:hover{
-    background: rgba(255,255,255,0.3);
-  }
-  
-  .card .btn, card h1{
-    transition: 0.3s;
-    transform: translateY(-20px);
+  .card-image {
+    grid-area: image;
+    background: url("img1.jpg");
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    background-size: cover;
   }
   
-  .card:hover .btn, .card:hover h1{
-    transform:  translateY(0);
+  .card-text {
+    grid-area: text;
+    margin: 25px;
+  }
+  .card-text .date {
+    color: rgb(255, 7, 110);
+    font-size:13px;
+  }
+  .card-text p {
+    color: grey;
+    font-size:15px;
+    font-weight: 300;
+  }
+  .card-text h2 {
+    margin-top:0px;
+    font-size:28px;
+  }
+  .card-stats {
+    grid-area: stats; 
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background: rgb(255, 7, 110);
+  }
+  .card-stats .stat {
+    padding:10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: white;
+  }
+  .card-stats .border {
+    border-left: 1px solid rgb(172, 26, 87);
+    border-right: 1px solid rgb(172, 26, 87);
+  }
+  .card-stats .value{
+    font-size:22px;
+    font-weight: 500;
+  }
+  .card-stats .value sup{
+    font-size:12px;
+  }
+  .card-stats .type{
+    font-size:11px;
+    font-weight: 300;
+    text-transform: uppercase;
+  }
+  .card:hover {
+    transform: scale(1.15);
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.6);
+  }
+  
+  /*card2*/
+  .card-image.card2 {
+    background: url("img2.jpg");
+    background-size: cover;
+  }
+  .card-text.card2 .date {
+    color: rgb(255, 77, 7);
+  }
+  .card-stats.card2 .border {
+    border-left: 1px solid rgb(185, 67, 20);
+    border-right: 1px solid rgb(185, 67, 20);
+  }
+  .card-stats.card2 {
+    background: rgb(255, 77, 7);
+  }
+  /*card3*/
+  .card-image.card3 {
+    background: url("img3.jpg");
+    background-size: cover;
+  }
+  .card-text.card3 .date {
+    color: rgb(0, 189, 63);
+  }
+  .card-stats.card3 .border {
+    border-left: 1px solid rgb(14, 122, 50);
+    border-right: 1px solid rgb(14, 122, 50);
+  }
+  .card-stats.card3 {
+    background: rgb(0, 189, 63);
   }
