--- a/public/css/perfil.css
+++ b/public/css/perfil.css
@@ -23,6 +23,11 @@ body {
     color       : #4E5155;
 }
 
+.center-container {
+  margin-left: 700px;
+  margin-bottom: 20px;
+}
+
 label.btn {
     margin-bottom: 0;
 }
