--- a/public/css/perfil.css
+++ b/public/css/perfil.css
@@ -23,6 +23,19 @@ body {
     color       : #4E5155;
 }
 
+/* styles.css o en la sección <style> de tu archivo Blade */
+.img-perfil {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border: 3px solid #010101;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+
+
+
+
 .center-container {
   margin-left: 700px;
   margin-bottom: 20px;
