--- a/public/css/carrito.css
+++ b/public/css/carrito.css
@@ -8,14 +8,25 @@
     margin-right: 10px;
   }
 
+body{
+  background: url(../IMG/cart9.jpg) center / cover;
+  justify-content: center;
+  align-items: center;
+}
   .cart-section {
     padding: 80px 0;
+   
   }
-
+p,h4,h2{
+  color: #fff;
+}
   .cart-items {
     max-width: 1000px;
     margin: 0 auto;
-    background-color: #e7e0c6;
+    background: #232526;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #414345, #232526db);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #414345, #232526ab); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     border-radius: 10px;
     padding: 50px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
