--- a/public/css/carrito.css
+++ b/public/css/carrito.css
@@ -9,7 +9,7 @@
   }
 
 body{
-  background: url(../IMG/cart9.jpg) center / cover;
+  background: url(../IMG/carrito5.jpg) center / cover;
   justify-content: center;
   align-items: center;
 }
@@ -17,7 +17,12 @@ body{
     padding: 80px 0;
    
   }
-p,h4,h2{
+
+
+.total{
+  color: #fff;
+}
+.nombre{
   color: #fff;
 }
   .cart-items {
